# LibraryApp

./: .gitignore  README.md  modify_views.py  test_payments.py
.github/workflows/: ci.yml
backend/analytics-service/: pyproject.toml
backend/analytics-service/app/: main.py  schemas.py
backend/catalog-service/catalog-service/: Dockerfile  pom.xml
backend/identity-service/: realm-export.json
backend/lending-service/: Dockerfile  celerybeat-schedule-shm  celerybeat-schedule-wal  manage.py  pyproject.toml
backend/lending-service/lending_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/lending-service/loans/: audit.py  authentication.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/lending-service/loans/migrations/: 0001_initial.py
backend/notify-service/: pyproject.toml
backend/notify-service/app/: database.py  mailer.py  main.py  models.py  schemas.py
backend/payment-service/: Dockerfile  pyproject.toml
backend/payment-service/app/: main.py
backend/payment-service/payment-service/: Dockerfile  pom.xml
backend/payment-service/payment-service/src/main/resources/: application.yml
docs/: architecture.md  installation.md  prod_instructions.md  security.md
frontend/library-web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/library-web/src/: App.tsx  main.tsx  vite-env.d.ts
infrastructure/: docker-compose.yml
infrastructure/nginx/: nginx.conf
library-mobile/: app.json  package-lock.json  package.json  verify-expo-env.js
library-mobile/app/: _layout.tsx
library-mobile/app/(auth)/: index.tsx
library-mobile/app/(tabs)/: _layout.tsx  borrow.tsx  index.tsx  loans.tsx  profile.tsx  transactions.tsx
library-mobile/app/book/: [id].tsx
library-mobile/context/: AuthContext.tsx
library-mobile/src/hooks/: useBooks.ts  useLoans.ts  useTransactions.ts
(+26 files in other folders)
